<resources>
    <string name="app_name">Covid-19</string>
    <string name="info_penyebaran_covid">Info Penyebaran Covid</string>
    <string name="covid_19">Covid-19</string>
    <string name="smk_coding_online">SMK Coding Online</string>
    <string name="info_covid_19">Info Covid-19</string>
    <string name="smk_coding_onlinee">SMK Coding Online</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="google">Google</string>
    <string name="logo_image">Logo Image</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="temukan_info_menarik_di_covid_19">Temukan info menarik di Covid-19</string>
    <string name="pendaftaran_akun">Pendaftaran Akun</string>
    <string name="nama_penggunaa">Nama Pengguna</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="alamat">Alamat</string>
    <string name="kata_sandii">Kata Sandi</string>
    <string name="daftarr">Daftar</string>
    <string name="kembali">Kembali</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_panah">Logo Panah</string>
    <string name="kanan">Kanan</string>
    <string name="kiri">Kiri</string>
    <string name="picture_of_user">Picture Of User</string>
    <string name="rizki_karianata">Rizki Karianata</string>
    <string name="malang_jawa_timur">Malang Jawa Timur</string>
    <string name="moehammad_rizki_karianata">Moehammad Rizki Karianata</string>
    <string name="_0895395333224">0895395333224</string>
    <string name="natarizky884_gmail_com">natarizky884_gmail_com</string>
    <string name="nama_lengkapp">Nama Lengkap</string>
    <string name="natrizky884_gmail_com">natrizky884@gmail.com</string>
    <string name="ubah">Ubah</string>
    <string name="keluar">Keluar</string>
    <string name="title_activity_maps">Map</string>

    <string name="facebook_app_id">3039893086129593</string>
    <string name="fb_login_protocol_scheme">fb3039893086129593</string>
</resources>
