<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditProfileActivity"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/nameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/nama_lengkap"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/usernameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/nama_pengguna"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/emailReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/alamat_email"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/telephoneReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/nomor_telepon"
            android:inputType="number"
            android:autofillHints="" />

        <EditText
            android:id="@+id/addressReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/alamat"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/passwordReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kata_sandi"
            android:inputType="textPassword"
            android:autofillHints="" />

    </LinearLayout>

    <Button
        android:id="@+id/btnRegisterCovid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daftar"
        android:background="#000"
        android:textColor="#fff"/>

    <Button
        android:id="@+id/btnLoginCovid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kembali"
        android:background="#00000000"/>

</LinearLayout>